--- a/portfolio.css
+++ b/portfolio.css
@@ -59,10 +59,24 @@
 }
 
 .title {
-    width: 700px;
-    margin: auto;
-    font-size: 7em;
     color: #FF7575;
+}
+
+.title h1 {
+    text-align: center;
+    font-size: 9em;
+    margin-bottom: 0;
+    margin-top: 0;
+    line-height: 15vh;
+    width: 40vw;
+}
+
+.title #part1 {
+    margin-left: 20vw;
+}
+
+.title #part2 {    
+    margin-left: 40vw;
 }
 
 .text-pop-up-top {
@@ -72,8 +86,8 @@
 
 .arrow
 {
-  position: relative;
-  bottom: -20em;
+  position: absolute;
+  bottom: 5vh;
   left: 50%;
   margin-left:-20px;
   width: 40px;
