--- a/portfolio.css
+++ b/portfolio.css
@@ -18,6 +18,10 @@ body {
   background: black;
 }
 
+p{
+    font-size: 1.5em;
+}
+
 @-webkit-keyframes text-pop-up-top {
   0% {
     -webkit-transform: translateY(0);
@@ -134,8 +138,7 @@ body {
     display: block;      
 }
 
-#perfil p {
-    font-size: 1.5em;
+#perfil p {    
     position: relative;
     display: block;
     width: 40vw;
@@ -194,6 +197,16 @@ body {
     margin: 0;
     top: 7vh;
     left: 5vw;
+    width: 40vw;
+}
+
+#projetos #slide2 img{
+    left: 50vw;
+    top: 25vh;
+    position: absolute;
+    width: 20vw;
+    height: auto;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
 }
 
 #projetos #slide3{
