--- a/portfolio.css
+++ b/portfolio.css
@@ -188,7 +188,7 @@ p{
 }
 
 #projetos #slide2{
-    background-color: #B38B32;
+    background-color: #6EDBFF;
 }
 
 #projetos #slide2 div{
@@ -196,7 +196,7 @@ p{
     display: block;
     margin: 0;
     top: 7vh;
-    left: 5vw;
+    left: 3vw;
     width: 40vw;
 }
 
@@ -211,6 +211,41 @@ p{
 
 #projetos #slide3{
     background-color: #EBE142;
+}
+
+#projetos #slide3 div{
+    position: relative;
+    display: block;
+    top: 7vh;
+    left: 3vw;
+    width: 40vw;
+}
+
+#projetos #slide3 ol{    
+    margin-top: 10vh;
+    list-style:decimal;
+    padding: 0;    
+    padding: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.6);
+    display: block;
+    border: 3px solid black;
+    width: 300px;
+    text-align: left;
+}
+
+#projetos #slide3 ol li{
+    display: block;
+    font-size: 1.5em;
+    padding: 2px;
+}
+
+#projetos #slide3 img{
+    left: 50vw;
+    top: 40vh;
+    position: absolute;
+    width: 30vw;
+    height: auto;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
 }
 
 .fp-controlArrow.fp-prev{
